RESOLVED FIXED133181
[EFL] Input fields and text areas are not rendered correctly after r167771
https://bugs.webkit.org/show_bug.cgi?id=133181
Summary [EFL] Input fields and text areas are not rendered correctly after r167771
Michal Pakula vel Rutka
Reported 2014-05-22 08:45:35 PDT
Attachments
proposed patch (13.80 KB, patch)
2014-05-23 08:40 PDT, Michal Pakula vel Rutka
gyuyoung.kim: review+
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 (661.96 KB, application/zip)
2014-05-23 13:16 PDT, Build Bot
no flags
applied Christophe's suggestion (13.80 KB, patch)
2014-05-26 00:07 PDT, Michal Pakula vel Rutka
no flags
Michal Pakula vel Rutka
Comment 1 2014-05-23 08:40:11 PDT
Created attachment 231964 [details] proposed patch r167771 introduced changes in methods in parent (RenderTheme) class which were not reflected in derived class (RenderThemeEfl)
Build Bot
Comment 2 2014-05-23 13:16:17 PDT
Comment on attachment 231964 [details] proposed patch Attachment 231964 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/4660147745980416 New failing tests: media/W3C/video/readyState/readyState_during_canplay.html
Build Bot
Comment 3 2014-05-23 13:16:21 PDT
Created attachment 231978 [details] Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-11 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Gyuyoung Kim
Comment 4 2014-05-25 20:14:45 PDT
Comment on attachment 231964 [details] proposed patch Looks fine.
Chris Dumez
Comment 5 2014-05-25 20:37:13 PDT
Comment on attachment 231964 [details] proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=231964&action=review > Source/WebCore/platform/efl/RenderThemeEfl.h:66 > ~RenderThemeEfl(); nit: would be nice to mark this destructor explicitly as virtual since you are cleaning up.
Michal Pakula vel Rutka
Comment 6 2014-05-26 00:07:15 PDT
Created attachment 232062 [details] applied Christophe's suggestion
WebKit Commit Bot
Comment 7 2014-05-26 02:50:48 PDT
Comment on attachment 232062 [details] applied Christophe's suggestion Clearing flags on attachment: 232062 Committed r169335: <http://trac.webkit.org/changeset/169335>
WebKit Commit Bot
Comment 8 2014-05-26 02:50:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.