[EFL] Input fields and text areas are not rendered correctly after r167771 https://bugs.webkit.org/show_bug.cgi?id=133181

Reviewed by Gyuyoung Kim.

Source/WebCore:
r167771 changed arguments of RenderTheme two virtual method arguments which were not reflected
in changes in derived classes, which caused parent method to be called. Arguments in derived class
were updated, also 'override' specifiers were added to all virtual methods to prevent similar errors.

Already covered by fast/forms/textarea-placeholder-wrapping.html

* platform/efl/RenderThemeEfl.cpp:
(WebCore::RenderThemeEfl::paintTextField):
(WebCore::RenderThemeEfl::paintTextArea):
* platform/efl/RenderThemeEfl.h:
(WebCore::RenderThemeEfl::supportsHover):
(WebCore::RenderThemeEfl::supportsControlTints):

LayoutTests:
* platform/efl-wk2/TestExpectations: Remove now passing test from test expectations.


Canonical link: https://commits.webkit.org/151295@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169335 268f45cc-cd09-0410-ab3c-d52691b4dbfc